# EveryOne-server

./: .gitignore  CMakeLists.txt  EveryOne.cc  EveryOne.slnx  config.ini
EveryOne/: EveryOne.cpp  EveryOne.vcxproj  EveryOne.vcxproj.filters  config.ini  config_manager.cc  config_manager.cpp  config_manager.h  cserver.cc  cserver.cpp  cserver.h  header.h  httpconnection.cc  httpconnection.cpp  httpconnection.h  iocontext_pool.cc  iocontext_pool.h  logger.h  logicsystem.cc  logicsystem.cpp  logicsystem.h  message.grpc.pb.cc  message.pb.cc  message.pb.h  message.proto  mysql.cc  mysql.h  mysql_dao.cc  mysql_dao.h  mysql_mgr.cc  mysql_mgr.h  redismgr.cc  redismgr.h  singleton.h  status_grpc_client.cc  status_grpc_client.h  verifygrpcclient.cc  verifygrpcclient.h
docs/: logicsystem-interfaces.md
test/: testRedis.cc
